--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,8 +17,8 @@ JWT_EXPIRE=7d
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=testmailags@gmail.com
-EMAIL_PASS=dkzw qljp rvut qwum
-EMAIL_FROM_NAME=MrMorris
+EMAIL_PASS=
+EMAIL_FROM_NAME=
 
 # For Gmail:
 # 1. Enable 2-factor authentication
@@ -27,8 +27,8 @@ EMAIL_FROM_NAME=MrMorris
 
 # Google OAuth Configuration
 # Get credentials from: https://console.cloud.google.com/apis/credentials
-GOOGLE_CLIENT_ID=814301580489-4knntcol2ghm1g7f21jhmk0dkteg3v9r.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 # Alternative Email Services:
 #
