--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@fontsource/bitcount-grid-single": "^5.2.2",
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.300.0",
@@ -22,6 +25,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
