Only updates records by direct user instruction

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,8 @@ BACKEND_URL=http://localhost:5000
 FRONTEND_URL=http://localhost:3000
 
 # MongoDB Connection
-MONGODB_URI=mongodb://localhost:27017/mrmorris
+MONGODB_URI=mongodb+srv://xeet991_db_user:yERSenRnu5zS1xVY@cluster0.el3m88h.mongodb.net
+
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
@@ -15,10 +16,10 @@ JWT_EXPIRE=7d
 
 # Email Configuration (Gmail example)
 EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
+EMAIL_PORT=465
 EMAIL_USER=testmailags@gmail.com
-EMAIL_PASS=
-EMAIL_FROM_NAME=
+EMAIL_PASS=dkzw qljp rvut qwum
+EMAIL_FROM_NAME=MrMorris
 
 # For Gmail:
 # 1. Enable 2-factor authentication
@@ -27,8 +28,19 @@ EMAIL_FROM_NAME=
 
 # Google OAuth Configuration
 # Get credentials from: https://console.cloud.google.com/apis/credentials
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=814301580489-4knntcol2ghm1g7f21jhmk0dkteg3v9r.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET=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
+
+# AI Service Configuration
+# Anthropic (Claude) API Key - Get from: https://console.anthropic.com/
+ANTHROPIC_API_KEY=your-anthropic-api-key
+
+# OpenAI API Key - Get from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your-openai-api-key
+
+# Google Gemini API Key - Get from: https://aistudio.google.com/apikey
+GEMINI_API_KEY=AIzaSyBL7gI5pILw0e3ZmH63vGB6aMl-m87yfzo
 
 # Alternative Email Services:
 #
