--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.0",
     "zustand": "^5.0.8"
