--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,9 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "reactflow": "^11.11.4",
     "remark-gfm": "^4.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.0",
     "zustand": "^5.0.8"
