feat: implement Apollo.io integration for contact enrichment, search, and usage management.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -42,6 +42,14 @@ OPENAI_API_KEY=your-openai-api-key
 # Google Gemini API Key - Get from: https://aistudio.google.com/apikey
 GEMINI_API_KEY=AIzaSyBL7gI5pILw0e3ZmH63vGB6aMl-m87yfzo
 
+# Apollo.io Configuration
+# Get API key from: https://apollo.io/settings/integrations/api
+APOLLO_API_KEY=vdfgdf
+APOLLO_BASE_URL=https://api.apollo.io/v1
+APOLLO_TIMEOUT=30000
+APOLLO_RATE_LIMIT_MINUTE=100
+APOLLO_RATE_LIMIT_DAY=10000
+
 # Alternative Email Services:
 #
 # SendGrid:
