feat: Add a comprehensive workflow management system with UI configuration and backend execution.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,16 @@
 {
   "version": 2,
+  "crons": [
+    {
+      "path": "/api/cron/workflows",
+      "schedule": "* * * * *"
+    }
+  ],
   "rewrites": [
+    {
+      "source": "/api/cron/(.*)",
+      "destination": "/api/cron/$1"
+    },
     {
       "source": "/(.*)",
       "destination": "/api"
