--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,10 @@
     "framer-motion": "^11.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.300.0",
-    "next": "^14.2.0",
+    "next": "^15.5.9",
     "next-themes": "^0.2.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.6.0",
@@ -44,14 +44,18 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.0.0",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.2.0",
+    "eslint-config-next": "16.0.10",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
