--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,12 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@langchain/anthropic": "^1.3.0",
+    "@langchain/community": "^1.1.0",
+    "@langchain/core": "^1.1.5",
+    "@langchain/google-genai": "^2.1.0",
+    "@langchain/langgraph": "^1.0.4",
+    "@langchain/openai": "^1.2.0",
     "@types/multer": "^2.0.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
@@ -21,6 +27,7 @@
     "express-rate-limit": "^8.2.1",
     "googleapis": "^167.0.0",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^1.2.0",
     "mongoose": "^8.0.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
@@ -29,6 +36,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "tavily": "^1.0.2",
     "zod": "^3.22.0"
   },
   "devDependencies": {
