--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@langchain/community": "^1.1.0",
     "@langchain/core": "^1.1.5",
     "@langchain/google-genai": "^2.1.0",
+    "@langchain/google-vertexai": "^2.1.0",
     "@langchain/langgraph": "^1.0.4",
     "@langchain/openai": "^1.2.0",
     "@types/multer": "^2.0.0",
