feat: Add Gemini AI model factory and Tavily web search tool with environment variable configuration.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -42,6 +42,9 @@ OPENAI_API_KEY=your-openai-api-key
 # Google Gemini API Key - Get from: https://aistudio.google.com/apikey
 GEMINI_API_KEY=AIzaSyBL7gI5pILw0e3ZmH63vGB6aMl-m87yfzo
 
+# Tavily API Key - Get from: https://tavily.com (for AI agent web search)
+TAVILY_API_KEY=your-key
+
 # Apollo.io Configuration
 # Get API key from: https://apollo.io/settings/integrations/api
 APOLLO_API_KEY=vdfgdf
