--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@langchain/langgraph": "^1.0.4",
     "@langchain/openai": "^1.2.0",
     "@types/multer": "^2.0.0",
+    "@types/pdf-parse": "^1.1.5",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
@@ -37,7 +38,9 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdf-parse": "^1.1.1",
     "tavily": "^1.0.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.0"
   },
   "devDependencies": {
