--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
+    "resend": "^6.6.0",
     "tavily": "^1.0.2",
     "xlsx": "^0.18.5",
     "zod": "^3.22.0"
