feat: Add BullMQ queue configuration for event processing and update project gap analysis documentation.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -53,6 +53,11 @@ APOLLO_TIMEOUT=30000
 APOLLO_RATE_LIMIT_MINUTE=100
 APOLLO_RATE_LIMIT_DAY=10000
 
+# Redis Configuration (for BullMQ queues)
+# For Upstash, use the Redis URL (not REST URL) from your Upstash dashboard
+# Format: rediss://default:<password>@<endpoint>:6379
+REDIS_URL=rediss://default:your-upstash-password@your-endpoint.upstash.io:6379
+
 # Alternative Email Services:
 #
 # SendGrid:
