--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "MrMorris Express Backend API",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon --exec \"node --max-old-space-size=8192 -r ts-node/register/transpile-only\" src/server.ts",
     "build": "node --max-old-space-size=8192 node_modules/typescript/bin/tsc || echo 'Build completed with warnings'",
     "build:fast": "node --max-old-space-size=8192 node_modules/typescript/bin/tsc --transpileOnly || tsc --transpileOnly",
     "start": "node dist/server.js",
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@langchain/core": "^1.1.6",
+    "@langchain/google-vertexai": "^2.1.1",
     "@types/multer": "^2.0.0",
     "@types/pdf-parse": "^1.1.5",
     "axios": "^1.13.2",
@@ -24,6 +26,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
+    "google-auth-library": "^10.5.0",
     "googleapis": "^167.0.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
