feat: Initialize backend server, environment variables, and AI agent system with supervisor routing to specialized and general workers.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -42,6 +42,12 @@ OPENAI_API_KEY=your-openai-api-key
 # Google Gemini API Key - Get from: https://aistudio.google.com/apikey
 GEMINI_API_KEY=AIzaSyBL7gI5pILw0e3ZmH63vGB6aMl-m87yfzo
 
+# Google Vertex AI Credentials (Base64 encoded)
+# For production/Railway: Encode your vertex-key.json to base64:
+#   PowerShell: [Convert]::ToBase64String([System.Text.Encoding]::UTF8.GetBytes((Get-Content -Raw vertex-key.json)))
+#   Linux/Mac: base64 vertex-key.json
+# For local development: Just keep the vertex-key.json file in the backend folder
+GOOGLE_CREDENTIALS_BASE64=
 # Tavily API Key - Get from: https://tavily.com (for AI agent web search)
 TAVILY_API_KEY=your-key
 
