--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
     "resend": "^6.6.0",
+    "sharp": "^0.34.5",
     "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.22.0"
