--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
     "react-dropzone": "^14.3.8",
+    "react-email-editor": "^1.7.11",
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
