feat: Introduce a comprehensive analytics, tracking, and reporting suite across frontend and backend.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -83,3 +83,7 @@ REDIS_URL=rediss://default:your-upstash-password@your-endpoint.upstash.io:6379
 # EMAIL_PORT=587
 # EMAIL_USER=your-ses-smtp-username
 # EMAIL_PASS=your-ses-smtp-password
+
+# Sentry Error Tracking (Optional)
+# Get DSN from: https://sentry.io/settings/projects/your-project/keys/
+SENTRY_DSN=
