feat: Implement form notification emails, add new frontend pages for forms and tracking, introduce WordPress integration, and consolidate lead generation documentation while removing old notes.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,13 @@
-# Backend API URL
+# Backend API URL (for API calls)
 NEXT_PUBLIC_API_URL=http://localhost:5000
 
-# Next.js App URL
+# Backend URL (for tracking script - same as API URL usually)
+NEXT_PUBLIC_BACKEND_URL=http://localhost:5000
+
+# Frontend App URL
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Production values (uncomment and update for deployment):
+# NEXT_PUBLIC_API_URL=https://api.your-domain.com
+# NEXT_PUBLIC_BACKEND_URL=https://api.your-domain.com
+# NEXT_PUBLIC_APP_URL=https://app.your-domain.com
