--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,13 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.0",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
