feat: Introduce comprehensive workflow builder with data source resolution, node actions for Slack, Google Sheets, Notion, HTTP, AI Agent, and related UI components and documentation.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,15 @@
 # Server Configuration
 PORT=5000
 NODE_ENV=development
+
+# Backend URL - Auto-constructs OAuth redirect URIs
+# Development: http://localhost:5000
+# Production: https://api.clianta.online (or your domain)
 BACKEND_URL=http://localhost:5000
 
 # Frontend URL (for CORS and email links)
+# Development: http://localhost:3000
+# Production: https://clianta.online (or your domain)
 FRONTEND_URL=http://localhost:3000
 
 # MongoDB Connection
@@ -26,11 +32,29 @@ EMAIL_FROM_NAME=MrMorris
 # 2. Generate an App Password: https://myaccount.google.com/apppasswords
 # 3. Use the generated password as EMAIL_PASS
 
-# Google OAuth Configuration
+# Google OAuth Configuration (for Google Sheets integration)
 # Get credentials from: https://console.cloud.google.com/apis/credentials
 GOOGLE_CLIENT_ID=814301580489-4knntcol2ghm1g7f21jhmk0dkteg3v9r.apps.googleusercontent.com
-
 GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://localhost:4000/api/integrations/google_sheets/oauth/callback
+
+# Slack OAuth Configuration
+# Get from: https://api.slack.com/apps
+SLACK_CLIENT_ID=your-slack-client-id
+SLACK_CLIENT_SECRET=your-slack-client-secret
+# SLACK_REDIRECT_URI is auto-constructed from BACKEND_URL
+# To override, uncomment and set manually:
+# SLACK_REDIRECT_URI=https://api.clianta.online/api/integrations/slack/oauth/callback
+
+# Notion OAuth Configuration
+# Get credentials from: https://www.notion.so/my-integrations
+NOTION_CLIENT_ID=your-notion-client-id
+NOTION_CLIENT_SECRET=your-notion-client-secret
+NOTION_REDIRECT_URI=http://localhost:4000/api/integrations/notion/oauth/callback
+
+# Integration Credential Encryption
+# Generate with: openssl rand -base64 32
+ENCRYPTION_KEY=your-32-byte-base64-encryption-key
 
 # AI Service Configuration
 # Anthropic (Claude) API Key - Get from: https://console.anthropic.com/
