--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@google/generative-ai": "^0.24.1",
     "@langchain/core": "^1.1.6",
     "@langchain/google-vertexai": "^2.1.1",
+    "@notionhq/client": "^5.6.0",
     "@sentry/node": "^10.32.1",
     "@slack/web-api": "^7.13.0",
     "@types/multer": "^2.0.0",
