--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
     "pdf-parse": "^1.1.1",
     "resend": "^6.6.0",
     "sharp": "^0.34.5",
+    "socket.io": "^4.8.3",
     "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.22.0"
