feat: implement universal tracking system with client-side script and backend event processing.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,6 @@
+# ============================================
+# DEVELOPMENT (Local)
+# ============================================
 # Backend API URL (for API calls - without /api, that's added by the client)
 NEXT_PUBLIC_API_URL=http://localhost:5000
 
@@ -10,8 +13,11 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # Frontend URL (for embeds, forms, landing pages - usually same as APP_URL)
 NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
 
-# Production values (uncomment and update for deployment):
-# NEXT_PUBLIC_API_URL=https://api.your-domain.com
-# NEXT_PUBLIC_BACKEND_URL=https://api.your-domain.com
-# NEXT_PUBLIC_APP_URL=https://app.your-domain.com
-# NEXT_PUBLIC_FRONTEND_URL=https://app.your-domain.com
+# ============================================
+# PRODUCTION (clianta.online)
+# Uncomment these and comment out the local ones for production:
+# ============================================
+# NEXT_PUBLIC_API_URL=https://api.clianta.online
+# NEXT_PUBLIC_BACKEND_URL=https://api.clianta.online
+# NEXT_PUBLIC_APP_URL=https://clianta.online
+# NEXT_PUBLIC_FRONTEND_URL=https://clianta.online
