feat: Introduce core marketing automation platform with lead scoring, email, meeting scheduling, and CRM integrations.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -111,3 +111,9 @@ REDIS_URL=rediss://default:your-upstash-password@your-endpoint.upstash.io:6379
 # Sentry Error Tracking (Optional)
 # Get DSN from: https://sentry.io/settings/projects/your-project/keys/
 SENTRY_DSN=
+
+# Twilio SMS Service (Optional)
+# Get credentials from: https://console.twilio.com/
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
