--- a/backend/package.json
+++ b/backend/package.json
@@ -19,13 +19,17 @@
     "@notionhq/client": "^5.6.0",
     "@sentry/node": "^10.32.1",
     "@slack/web-api": "^7.13.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "@types/jsforce": "^1.11.6",
     "@types/multer": "^2.0.0",
     "@types/pdf-parse": "^1.1.5",
+    "@types/twilio": "^3.19.2",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.19",
     "deepagents": "^1.3.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -34,6 +38,7 @@
     "google-auth-library": "^10.5.0",
     "googleapis": "^167.0.0",
     "ioredis": "^5.8.2",
+    "jsforce": "^3.10.10",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "multer": "^2.0.2",
@@ -47,6 +52,7 @@
     "resend": "^6.6.0",
     "sharp": "^0.34.5",
     "socket.io": "^4.8.3",
+    "twilio": "^5.11.1",
     "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.22.0"
