--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
     "@hookform/resolvers": "^3.3.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
@@ -47,6 +49,7 @@
     "reactflow": "^11.11.4",
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.0",
