--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@vercel/node": "^3.0.0",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
+    "shadcn": "^3.6.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
