--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -43,7 +43,7 @@ development_status:
   # Epic 1: Manual Agent Building (11 stories)
   epic-1: in-progress
   1-1-create-basic-agent: done
-  1-2-add-trigger-configuration: backlog
+  1-2-add-trigger-configuration: review
   1-3-write-natural-language-instructions: backlog
   1-4-configure-agent-restrictions: backlog
   1-5-configure-agent-memory: backlog
