--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "MrMorris Express Backend API",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon --exec \"node --max-old-space-size=8192 -r ts-node/register/transpile-only\" src/server.ts",
+    "dev": "docker compose -f ../docker-compose.yml up -d && nodemon --exec \"node --max-old-space-size=8192 -r ts-node/register/transpile-only\" src/server.ts",
+    "dev:no-redis": "nodemon --exec \"node --max-old-space-size=8192 -r ts-node/register/transpile-only\" src/server.ts",
     "build": "node --max-old-space-size=8192 node_modules/typescript/bin/tsc --skipLibCheck || echo 'Build completed with warnings'",
     "build:fast": "node --max-old-space-size=2048 node_modules/typescript/bin/tsc --transpileOnly --skipLibCheck || tsc --transpileOnly --skipLibCheck",
     "start": "node dist/server.js",
@@ -36,6 +37,7 @@
     "express-rate-limit": "^8.2.1",
     "google-auth-library": "^10.5.0",
     "googleapis": "^167.0.0",
+    "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "jsforce": "^3.10.10",
     "jsonwebtoken": "^9.0.2",
