--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -44,7 +44,7 @@ development_status:
   epic-1: in-progress
   1-1-create-basic-agent: done
   1-2-add-trigger-configuration: review
-  1-3-write-natural-language-instructions: backlog
+  1-3-write-natural-language-instructions: done
   1-4-configure-agent-restrictions: backlog
   1-5-configure-agent-memory: backlog
   1-6-set-approval-requirements: backlog
