--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.0",
+    "use-debounce": "^10.1.0",
     "zod": "^3.22.0",
     "zustand": "^5.0.8"
   },
