fix: 2vcore in productio

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "dev:pm2": "npm run build:fast && pm2 start ecosystem.config.js",
     "build": "node --max-old-space-size=8192 node_modules/typescript/bin/tsc --skipLibCheck || echo 'Build completed with warnings'",
     "build:fast": "node --max-old-space-size=8192 node_modules/typescript/bin/tsc --skipLibCheck || echo 'Build completed with warnings'",
-    "start": "node dist/server.js",
+    "start": "node dist/cluster.js",
+    "start:single": "node dist/server.js",
     "start:dev": "ts-node src/server.ts",
     "start:pm2": "pm2 start ecosystem.config.js --env production",
     "stop:pm2": "pm2 stop morrisB-api",
