--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -57,8 +57,8 @@ development_status:
 
   # Epic 2: Safe Agent Testing (7 stories)
   epic-2: in-progress
-  2-1-enable-test-mode: review
-  2-2-select-test-target: backlog
+  2-1-enable-test-mode: done
+  2-2-select-test-target: done
   2-3-step-by-step-execution-preview: backlog
   2-4-validate-instructions: backlog
   2-5-show-execution-estimates: backlog
