--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -74,7 +74,7 @@ development_status:
   3-4-event-based-trigger-execution: done
   3-5-sequential-multi-step-workflows: done
   3-6-conditional-logic-execution: review
-  3-7-send-email-action: backlog
+  3-7-send-email-action: done
   3-8-linkedin-invitation-action: backlog
   3-9-web-search-action: backlog
   3-10-task-and-tag-actions: backlog
