--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -77,7 +77,7 @@ development_status:
   3-7-send-email-action: done
   3-8-linkedin-invitation-action: done
   3-9-web-search-action: done
-  3-10-task-and-tag-actions: backlog
+  3-10-task-and-tag-actions: review
   3-11-update-field-and-enrich-actions: backlog
   3-12-wait-action-and-human-handoff: backlog
   3-13-track-execution-history: backlog
