--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -81,7 +81,7 @@ development_status:
   3-11-update-field-and-enrich-actions: done
   3-12-wait-action-and-human-handoff: review
   3-13-track-execution-history: in-progress
-  3-14-view-execution-logs: backlog
+  3-14-view-execution-logs: review
   3-15-export-and-dashboard: backlog
   epic-3-retrospective: optional
 
