--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
     "react-dropzone": "^14.3.8",
     "react-email-editor": "^1.7.11",
