--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": ["ES2020"],
+    "lib": [
+      "ES2020"
+    ],
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": false,
@@ -15,6 +17,15 @@
     "incremental": true,
     "tsBuildInfoFile": ".tsbuildinfo"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "node_modules/**/*", "**/node_modules/**"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "node_modules/**/*",
+    "**/node_modules/**",
+    "**/*.test.ts",
+    "**/__tests__/**"
+  ]
 }
