--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -86,8 +86,8 @@ development_status:
   epic-3-retrospective: optional
 
   # Epic 4: AI-Powered Agent Building (11 stories)
-  epic-4: backlog
-  4-1-ai-copilot-chat-interface: backlog
+  epic-4: in-progress
+  4-1-ai-copilot-chat-interface: done
   4-2-generate-complete-agent-instructions: backlog
   4-3-answer-questions-about-automation: backlog
   4-4-suggest-improvements-to-instructions: backlog
