--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -89,7 +89,7 @@ development_status:
   epic-4: in-progress
   4-1-ai-copilot-chat-interface: done
   4-2-generate-complete-agent-instructions: review
-  4-3-answer-questions-about-automation: backlog
+  4-3-answer-questions-about-automation: done
   4-4-suggest-improvements-to-instructions: backlog
   4-5-analyze-failed-executions: backlog
   4-6-access-workspace-context: backlog
