--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -103,8 +103,8 @@ development_status:
   # Epic 5: External Integrations (12 stories)
   epic-5: in-progress
   5-1-oauth-authentication-flow: done
-  5-2-automatic-token-refresh: in-progress
-  5-3-integration-expiration-notifications: backlog
+  5-2-automatic-token-refresh: done
+  5-3-integration-expiration-notifications: review
   5-4-gmail-integration-for-emails: backlog
   5-5-linkedin-integration-for-connection-requests: backlog
   5-6-slack-integration-for-notifications: backlog
