--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -91,7 +91,7 @@ development_status:
   4-2-generate-complete-agent-instructions: review
   4-3-answer-questions-about-automation: done
   4-4-suggest-improvements-to-instructions: done
-  4-5-analyze-failed-executions: backlog
+  4-5-analyze-failed-executions: done
   4-6-access-workspace-context: backlog
   4-7-auto-complete-suggestions: backlog
   4-8-next-step-predictions: backlog
