--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,9 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.17.0",
     "@types/react": "19.2.7",
