--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.0",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.468.0",
     "next": "^15.5.9",
