--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,15 +29,19 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/d3-scale": "^4.0.9",
+    "@types/react-simple-maps": "^3.0.6",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.0",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.468.0",
     "next": "^15.5.9",
     "next-themes": "^0.4.4",
@@ -51,6 +55,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-simple-maps": "^3.0.0",
     "react-syntax-highlighter": "^16.1.0",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.4",
@@ -59,6 +64,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "use-debounce": "^10.1.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.0",
     "zustand": "^5.0.8"
   },
